discussions.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discussions
spec:
  replicas : 2
  selector:
    matchLabels:
      app: discussions
  template:
    metadata:
      labels:
        app: discussions
    spec:
      containers:
      - name: discussions
        image: mihaicostin/chat-project-discussions1.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: discussions-svc
spec:
  selector:
    app: discussions
  ports:
  - port: 5000
    targetPort: 5000
