post.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - name: post
        image: mihaicostin/chat-project-messages1.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: post-svc
spec:
  selector:
    app: post
  ports:
  - port: 5000
    targetPort: 5000
