sessions.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions
spec:
  selector:
    matchLabels:
      app: sessions
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
      - name: sessions
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: sessions
spec:
  selector:
    app: sessions
  ports:
  - port: 6379
    targetPort: 6381
