ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entrypoint
  labels:
    name: entrypoint
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: login-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: /post
        backend: 
          service: 
            name: post-svc
            port:
              number: 5000
